--- a/base.pug
+++ b/base.pug
@@ -1,4 +1,4 @@
-html(lang="en")
+html(lang="en-US")
   head
     meta(charset="utf-8")
     title Vlad Polietaiev
@@ -6,3 +6,5 @@ html(lang="en")
 
   body
     include resume.pug
+
+    footer.footer
