--- a/resume.pug
+++ b/resume.pug
@@ -16,74 +16,10 @@ header
     li.telegram
       | #[span.label Telegram:] #[a(href="https://t.me/poletaevvlad") @poletaevvlad]
     li.location
-      | #[span.label Location:] Ukraine, Remote only
+      | #[span.label Location:] Bauskas novads, Latvia
 
 p.summary
-  | A software engineer with 1+ year of commercial experience developing REST APIs and back end services mainly with Python-based technology stack with a passion for programming both professionally and independently. Looking for an opportunity to apply and develop my skills while working on an interesting and impactful projects.
-
-section
-  h2 Professional experience
-
-  section.employment
-    .info
-      h3 Software Developer #[span.conj at] DevelopsToday
-      .dates May 2021&ndash;Present, Fully remote
-    ul.responsibilities
-      li Participaded in the development of Django Rest Framework application, 
-        | maintained Stripe payments workflow, SendBird integration
-      li Designed, developed, and tested REST APIs endpoints using FastAPI on 
-        | multiple projects
-      li Participated in the development of back end and front end components 
-        | of a Firebase application, maintained and improved performance of the 
-        | data synchronization workflow with a third party API
-      li Developed and optimized the Web scrapping and data extraction 
-        | workflows on top of Google Cloud Functions
-      li Implemented a data replication pipeline for ElasticSearch and a 
-        | recommendation engine on top of it
-      li Participated in internal interviewing/hiring processes, mentored a 
-        | junior developer
-
-section
-  h2 Personal projects
-
-  div.projects-list
-    section.project
-      .info
-        h3 Hedgehog
-      .description A podcast player and organizer with a termi&shy;nal-based user interface written in Rust. It implements subscription management, automatic feed updates, searching in iTunes Store, tracking playback status and position.
-      nav.links
-        ul
-          li #[a(href="https://github.com/poletaevvlad/Hedgehog") #[span.icon.github]/poletaevvlad/Hedgehog]
-
-    section.project
-      .info
-        h3 cmdparse
-      .description A Rust library and derive macro for parsing arbitrary types 
-        | from commands strings with autocompletion 
-        | support based on the parser combinator approach.
-      nav.links
-        ul
-          li #[a(href="https://docs.rs/cmdparse") #[span.icon.docsrs] Docs]
-          li #[a(href="https://github.com/poletaevvlad/cmdparse") #[span.icon.github]/poletaevvlad/cmdparse]
-
-    section.project
-      .info
-        h3 anime-list-popup
-      .description A browser extension for viewing and managing the users&apos; lists of TV series they watched or plan to watch from myanimelist.net writtern in TypeScript/React. 
-      nav.links
-        ul
-          li #[a(href="https://chrome.google.com/webstore/detail/anime-list-popup/glabhkacodgkcgnbccfkjhlkolcidkdo") #[span.icon.chrome]]
-          li #[a(href="https://addons.mozilla.org/en-US/firefox/addon/anime-list-popup/" title="Firefox Add-ons") #[span.icon.firefox]]
-          li #[a(href="https://github.com/poletaevvlad/anime-list-popup" title="Chrome Web Store") #[span.icon.github]/poletaevvlad/anime-list-popup]
-
-   
-    section.project
-      .info
-        h3 http-asm
-      .description A web server, written in x86-64 assembly for GNU/Linux without dependencies (including libc). It implements a subset of HTTP 1.0 spec and supports directory listing.
-      nav.links
-        ul
-          li #[a(href="https://github.com/poletaevvlad/http-asm") #[span.icon.github]/poletaevvlad/http-asm]
+  | I'm a software engineer with 1+ years of commercial experience developing REST APIs and back-end services, mainly with a Python-based technology stack. I have a passion for programming: both professionally and independently, and I've spent a significant amount of time learning and developing my skills while working on a diverse set of pet projects. I'm looking for an opportunity to apply and develop my skills further while working on interesting and impactful projects.
 
 section
   h2 Skills
@@ -128,12 +64,73 @@ section
       li Ukrainian, Russian (native)
       li English (professional working proficiency)
 
+section
+  h2 Professional experience
+
+  section.employment
+    .info
+      h3 Software Developer #[span.conj at] DevelopsToday
+      .dates May 2021&ndash;Present, Fully remote
+    ul.responsibilities
+      li Participaded in the development of Django Rest Framework application, 
+        | maintained Stripe payments workflow, SendBird integration
+      li Designed, developed, and tested REST APIs endpoints using FastAPI on 
+        | multiple projects
+      li Participated in the development of back end and front end components 
+        | of a Firebase application, maintained and improved performance of the 
+        | data synchronization workflow with a third party API
+      li Developed and optimized the Web scrapping and data extraction 
+        | workflows on top of Google Cloud Functions
+      li Implemented a data replication pipeline for ElasticSearch and a 
+        | recommendation engine on top of it
+      li Participated in internal interviewing/hiring processes, mentored 
+        | junior developers
+
+section
+  h2 Personal projects
+
+  div.projects-list
+    section.project
+      .info
+        h3 Hedgehog
+      .description A podcast player and organizer with a termi&shy;nal-based user interface written in Rust. It implements subscription management, automatic feed updates, iTunes Store searches, playback status and position tracking.
+      nav.links
+        ul
+          li #[a(href="https://github.com/poletaevvlad/Hedgehog") #[span.icon.github]/poletaevvlad/Hedgehog]
+
+    section.project
+      .info
+        h3 cmdparse
+      .description A Rust library and derive macro for parsing arbitrary types 
+        | from user-entered commands. It's based on parser combinators
+        | and supports auto-completion.
+      nav.links
+        ul
+          li #[a(href="https://docs.rs/cmdparse") #[span.icon.docsrs] Docs]
+          li #[a(href="https://github.com/poletaevvlad/cmdparse") #[span.icon.github]/poletaevvlad/cmdparse]
+
+    section.project
+      .info
+        h3 anime-list-popup
+      .description A browser extension for viewing and managing the users&apos; lists of TV series they've watched or plan to watch from myanimelist.net written in TypeScript/React. 
+      nav.links
+        ul
+          li #[a(href="https://chrome.google.com/webstore/detail/anime-list-popup/glabhkacodgkcgnbccfkjhlkolcidkdo") #[span.icon.chrome]]
+          li #[a(href="https://addons.mozilla.org/en-US/firefox/addon/anime-list-popup/" title="Firefox Add-ons") #[span.icon.firefox]]
+          li #[a(href="https://github.com/poletaevvlad/anime-list-popup" title="Chrome Web Store") #[span.icon.github]/poletaevvlad/anime-list-popup]
+
+    section.project
+      .info
+        h3 http-asm
+      .description A web server, written in x86-64 assembly for GNU/Linux with no dependencies (including libc). It implements a subset of HTTP 1.0 spec and supports directory listing.
+      nav.links
+        ul
+          li #[a(href="https://github.com/poletaevvlad/http-asm") #[span.icon.github]/poletaevvlad/http-asm]
 
 section
   h2 Education
   .info
     h3 Donetsk National Technical Universty, Donetsk, Ukraine
     .dates Sep 2014&ndash;Jun 2020
-  .description Master&apos;s degree in #[em Software Enginieering], master's thesis in the field of content-based image retrieval.
+  .description Master&apos;s degree in #[em Software Engineering], master's thesis on the subject of content-based image retrieval.
 
-  
