--- a/resume.pug
+++ b/resume.pug
@@ -15,6 +15,9 @@ header
         | poletaev.vladislav@gmail.com
     li.telegram
       | #[span.label Telegram:] #[a(href="https://t.me/poletaevvlad") @poletaevvlad]
+    if phone
+      li.phone
+        | #[span.label Phone:] #{phone.replaceAll(" ", "\u2009")}
     li.location
       | #[span.label Location:] Bauskas novads, Latvia
 
@@ -72,7 +75,7 @@ section
       h3 Software Developer #[span.conj at] DevelopsToday
       .dates May 2021&ndash;Present, Fully remote
     ul.responsibilities
-      li Participaded in the development of Django Rest Framework application, 
+      li Participated in the development of Django Rest Framework application, 
         | maintained Stripe payments workflow, SendBird integration
       li Designed, developed, and tested REST APIs endpoints using FastAPI on 
         | multiple projects
