Moved skills to the bottom

--- a/resume.pug
+++ b/resume.pug
@@ -13,59 +13,16 @@ header
     li.email
       a(href="mailto:poletaev.vladislav@gmail.com")
         | poletaev.vladislav@gmail.com
-    li.telegram
-      | #[span.label Telegram:] #[a(href="https://t.me/poletaevvlad") @poletaevvlad]
     if phone
       li.phone
         | #[span.label Phone:] #{phone.replaceAll(" ", "\u2009")}
+    li.telegram
+      | #[span.label Telegram:] #[a(href="https://t.me/poletaevvlad") @poletaevvlad]
     li.location
       | #[span.label Location:] Bauskas novads, Latvia
 
 p.summary
-  | I'm a software engineer with 1+ years of commercial experience developing REST APIs and back-end services, mainly with a Python-based technology stack. I have a passion for programming: both professionally and independently, and I've spent a significant amount of time learning and developing my skills while working on a diverse set of pet projects. I'm looking for an opportunity to apply and develop my skills further while working on interesting and impactful projects.
-
-section
-  h2 Skills
-  .skills
-    .label Languages & Technologies:
-    ul
-      li Python (FastAPI, Django, SqlAlchemy, Alembic)
-      li Rust
-      li RabbitMQ
-      li OpenCL
-
-  .skills
-    .label Databases: 
-    ul
-      li PostgreSQL
-      li MongoDB
-      li Google Firestore
-      li ElasticSearch
-      li SQLite
-      li Redis
-
-  .skills
-    .label Devops:
-    ul
-      li Google Cloud Platform (Cloud Functions, Firestore, Storage)
-      li AWS (S3, Lambda)
-      li Heroku
-      li Docker
-
-  .skills
-    .label Front end:
-    ul
-      li JS/Typescript
-      li React
-      li HTML, CSS
-      li Flutter
-      li JavaFX
-
-  .skills.separated
-    .label Languages:
-    ul
-      li Ukrainian, Russian (native)
-      li English (professional working proficiency)
+  | I'm a software engineer with 1+ years of commercial experience developing REST APIs and back-end services, mainly with a Python-based technology stack and I've spent countless hours learning and tinkering with different languages, tools, and technologies. I have the most experience building web services on top of the Google Cloud Platform, building APIs with FastAPI and DRF, using PostgreSQL and ElasticSearh. I'm looking for an opportunity to apply and develop my skills further while working on interesting and impactful projects.
 
 section
   h2 Professional experience
@@ -129,6 +86,49 @@ section
       nav.links
         ul
           li #[a(href="https://github.com/poletaevvlad/http-asm") #[span.icon.github]/poletaevvlad/http-asm]
+
+section
+  h2 Skills
+  .skills
+    .label Languages & Technologies:
+    ul
+      li Python (FastAPI, Django, SqlAlchemy, Alembic)
+      li Rust
+      li RabbitMQ
+      li OpenCL
+
+  .skills
+    .label Databases: 
+    ul
+      li PostgreSQL
+      li MongoDB
+      li Google Firestore
+      li ElasticSearch
+      li SQLite
+      li Redis
+
+  .skills
+    .label Devops:
+    ul
+      li Google Cloud Platform (Cloud Functions, Firestore, Storage)
+      li AWS (S3, Lambda)
+      li Heroku
+      li Docker
+
+  .skills
+    .label Front end:
+    ul
+      li JS/Typescript
+      li React
+      li HTML, CSS
+      li Flutter
+      li JavaFX
+
+  .skills.separated
+    .label Languages:
+    ul
+      li Ukrainian, Russian (native)
+      li English (professional working proficiency)
 
 section
   h2 Education
